// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaginationButtons /> should render the pagination buttons 1`] = `
<styled.div
  data-component-type="pagination_buttons"
>
  <styled.button
    chevron="left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <styled.span
      arrowDirection="left"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-left"
        type="solid"
      />
    </styled.span>
  </styled.button>
  <styled.button
    isCurrent={true}
    key="pagination-1"
    onClick={[Function]}
    type="button"
  >
    1
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-2"
    onClick={[Function]}
    type="button"
  >
    2
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-3"
    onClick={[Function]}
    type="button"
  >
    3
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-4"
    onClick={[Function]}
    type="button"
  >
    4
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-5"
    onClick={[Function]}
    type="button"
  >
    5
  </styled.button>
  <styled.div
    key="pagination-ellipsis"
  >
    ...
  </styled.div>
  <styled.button
    isCurrent={false}
    key="pagination-10"
    onClick={[Function]}
    type="button"
  >
    10
  </styled.button>
  <styled.button
    chevron="right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <styled.span
      arrowDirection="right"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-right"
        type="solid"
      />
    </styled.span>
  </styled.button>
</styled.div>
`;

exports[`<PaginationButtons /> should render the pagination buttons with margin 1`] = `
<styled.div
  data-component-type="pagination_buttons"
  margins={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
>
  <styled.button
    chevron="left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <styled.span
      arrowDirection="left"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-left"
        type="solid"
      />
    </styled.span>
  </styled.button>
  <styled.button
    isCurrent={true}
    key="pagination-1"
    onClick={[Function]}
    type="button"
  >
    1
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-2"
    onClick={[Function]}
    type="button"
  >
    2
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-3"
    onClick={[Function]}
    type="button"
  >
    3
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-4"
    onClick={[Function]}
    type="button"
  >
    4
  </styled.button>
  <styled.button
    isCurrent={false}
    key="pagination-5"
    onClick={[Function]}
    type="button"
  >
    5
  </styled.button>
  <styled.div
    key="pagination-ellipsis"
  >
    ...
  </styled.div>
  <styled.button
    isCurrent={false}
    key="pagination-10"
    onClick={[Function]}
    type="button"
  >
    10
  </styled.button>
  <styled.button
    chevron="right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <styled.span
      arrowDirection="right"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-right"
        type="solid"
      />
    </styled.span>
  </styled.button>
</styled.div>
`;
